# videobeaux

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yaml  install.sh  krinkle.json  pyproject.toml  requirements.txt  testrunner.sh  videobeaux.py
experimental/: bianlian.py  bianlian.sh  cmds.txt  convertersink.py  convertersink.sh  giffer.sh  keying.sh  maskbuffer.py  maskbuffer.sh  masking.sh  pip_basic.py  pip_basic.sh  pip_motion.py
ideas/: videobeaux-ideas.txt
programs/: bad_animation.py  bad_contrast.py  bad_predator.py  ball_point_pen.py  blur_pix.py  broken_scroll.py  convert.py  digital_boss.py  double_cup.py  download_yt.py  extract_frames.py  extract_sound.py  fever.py  frame_delay_pro1.py  frame_delay_pro2.py  frame_lag.py  ghostee.py  light_snow.py  looper_pro.py  lsd_feedback.py  mirror_delay.py  moving_pip.md  nostalgic_stutter.py  num_edits.py  overexposed_stutter.py  overlay_img_pro.py  pickle_juice.py  rb_blur.py  recalled_sensor.py  repainting.py  resize.py  reverse.py  scrolling.py  scrolling_pro.py  septic.py  silence_extraction.py  silence_xtraction.py  slight_smear.py  smudge.py  soapblind.py  (+12 more)
utils/: example.json  ffmpeg_operations.py  random.sh  testrunner.sh  video-title-test.sh
videobeaux/: cli.py
videobeaux/programs/: __init__.py  bad_animation.py  bad_contrast.py  bad_predator.py  ball_point_pen.py  blur_pix.py  broken_scroll.py  chain_builder.py  chain_builder_pro.py  convert.py  convert_dims.py  digital_boss.py  double_cup.py  download_yt.py  dynakey.py  extract_frames.py  extract_sound.py  fever.py  ghostee.py  (+41 more)
(+4 files in other folders)
